--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-torch>=1.7.0,!=1.12.0
-torchvision>=0.8.1,!=0.13.0
+torch==2.1.2
+torchvision==0.16.2
 tqdm>=4.41.0
 protobuf<4.21.3
 mmengine==0.10.2
