--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,88 @@
-streamlit-lottie
-plotly
-hydralit-components
-ultralytics
-matplotlib>=3.2.2
-numpy>=1.18.5,<1.24.0
-opencv-python>=4.1.1
-Pillow>=7.1.2
-PyYAML>=5.3.1
-requests>=2.23.0
-scipy>=1.4.1
+addict==2.4.0
+altair==5.2.0
+attrs==23.1.0
+beautifulsoup4==4.12.2
+blinker==1.7.0
+bs4==0.0.1
+cachetools==5.3.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
+dill==0.3.7
+filelock==3.13.1
+fonttools==4.47.0
+fsspec==2023.12.1
+gitdb==4.0.11
+GitPython==3.1.40
+hydralit-components==1.0.10
+idna==3.6
+importlib-metadata==6.11.0
+Jinja2==3.1.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+kiwisolver==1.4.5
+lxml==4.9.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+mdurl==0.1.2
+mmengine==0.10.2
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.23.5
+opencv-python==4.8.1.78
+packaging==23.2
+pandas==2.1.3
+Pillow==10.1.0
+platformdirs==4.1.0
+plotly==5.18.0
+protobuf==4.21.2
+psutil==5.9.7
+py-cpuinfo==9.0.0
+pyarrow==14.0.1
+pycocotools==2.0.7
+pydeck==0.8.1b0
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.32.0
+regex==2023.12.25
+requests==2.31.0
+rich==13.7.0
+rpds-py==0.13.2
+scipy==1.11.4
+seaborn==0.13.0
+shapely==2.0.2
+six==1.16.0
+smmap==5.0.1
+soupsieve==2.5
+streamlit==1.29.0
+streamlit-lottie==0.0.5
+sympy==1.12
+tenacity==8.2.3
+termcolor==2.4.0
+terminaltables==3.1.10
+thop==0.1.1.post2209072238
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
 torch==2.1.2
 torchvision==0.16.2
-tqdm>=4.41.0
-protobuf<4.21.3
-mmengine==0.10.2
--r mmcv/requirements/optional.txt
+tornado==6.4
+tqdm==4.66.1
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+ultralytics==8.0.231
+urllib3==2.1.0
+validators==0.22.0
+watchdog==3.0.0
+yapf==0.40.2
+zipp==3.17.0
 -e mmcv/
--r mmdetection/requirements.txt
 -e mmdetection
-dill
