--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+-f https://data.pyg.org/whl/torch-2.1.2+cpu.html 
+torch-scatter
+torchvision==0.16.2
 addict==2.4.0
 altair==5.2.0
 attrs==23.1.0
@@ -29,7 +32,6 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.2
 mdurl==0.1.2
-mmengine==0.10.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.23.5
@@ -71,9 +73,6 @@ thop==0.1.1.post2209072238
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
--f https://data.pyg.org/whl/torch-2.1.2+cpu.html 
-torch-scatter
-torchvision==0.16.2
 tornado==6.4
 tqdm==4.66.1
 typing_extensions==4.8.0
@@ -85,5 +84,6 @@ validators==0.22.0
 watchdog==3.0.0
 yapf==0.40.2
 zipp==3.17.0
+mmengine==0.10.2
 -e mmcv/
--e mmdetection
+-e mmdetection/
