--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
--f https://data.pyg.org/whl/torch-2.1.2+cpu.html 
-torch-scatter
-torchvision==0.16.2
+torch==1.8.1+cpu
+torchvision==0.9.1+cpu
+torchaudio==0.8.1
 addict==2.4.0
 altair==5.2.0
 attrs==23.1.0
