--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-pip install --upgrade pip
-
 torch==2.1.2
 torchaudio==2.1.2
 torchvision==0.16.2
@@ -87,4 +85,4 @@ watchdog==3.0.0
 yapf==0.40.2
 zipp==3.17.0
 ninja
--r mm_requirement.txt --no-deps
+-r mm_requirement.txt
